# CodeIntel

./: .coverage  .coverage.paul-X870-AORUS-ELITE-WIFI7.111467.XYgdmDHx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111470.XYvjKkZx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111473.XMoKZesx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111476.XEADsUBx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111479.XzbFqaKx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111482.XcjtlcBx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111485.XjyZhPFx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111488.XgtpWeSx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111522.XjhtxYdx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111556.XCDyPHex  .coverage.paul-X870-AORUS-ELITE-WIFI7.111624.XnWRmdsx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111658.XknyRPJx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111723.XGslZAux  .coverage.paul-X870-AORUS-ELITE-WIFI7.111726.XjqTJjkx  .coverage.paul-X870-AORUS-ELITE-WIFI7.111760.XLxigVdx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470701.XworuAvx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470704.XvppoeFx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470707.XWMPeRPx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470710.XjnjGaix  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470713.XzTPYKWx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470716.XeEMJlmx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470719.Xmpwbckx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470722.XuVyqtLx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470756.XETMmGux  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470824.XBNtFrYx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470858.XRFLBZSx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470892.XFoRqUyx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470926.XQPDOkZx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470960.XNaAhgBx  .coverage.paul-X870-AORUS-ELITE-WIFI7.1470994.XrgvagRx  .envrc  .gitignore  AGENTS.md  Makefile  README_METADATA.md  README_METADATA_revised.md  generate_documents.sh  index.scip  main.py  (+4 more)
$tmpdir/repo/: __init__.py  runner.py
.cursor/: mcp.json
.github/workflows/: contract-docs.yml
.hypothesis/constants/: 02f9e5d301fc14b4  03cf9656760e4230  03d8df19bcde8910  0553ff618a55254e  079ad4f07c4590b6  082ce144b75dca76  0901745f57d98629  09e8d02bb48ace7f  0accc834e91d0bb6  0ad1cc979d3cf3e6  0b3446af7bf9c966  0b856da848391fbd  0c23d9e0f1665d59  0c8a03f10643b87b  0cf096d6eb02bf58  0dc03576c52442b8  0ebf5e155b7fdd12  0fca285a20014637  0fd82c0d69eff777  10ff6243086790b3  130614d3071190ba  13328829e32a14e1  1379497a0557a7e6  1588d43cd48aeb56  16de999b04d07292  1723b34bb75eec47  17b6f5d3ad41de83  1bd6b40a73a99bb1  1c255dce8e80ffc0  1da0e849bd6a53f8  20ccc0ef10b190dd  22fac9873213c43a  2344943aaecd1810  245e07a75c037634  25ee96fbf8783106  273f309fb5a14284  279f717abed0d48c  2847dc7148da015f  2b491218611b680a  2b50ab202a22d5e1  (+226 more)
.hypothesis/patches/: 2025-11-29--5799d828.patch  2025-11-29--58eb3159.patch  2025-11-29--5b43b542.patch  2025-11-29--95d51800.patch  2025-11-29--9ff261d0.patch  2025-11-29--ba7b28e9.patch  2025-11-29--cc519cb0.patch  2025-11-29--ee18df76.patch
Document Output/: ast_metrics.jsonl  ast_metrics.parquet  ast_nodes.jsonl  ast_nodes.parquet  call_graph_edges.jsonl  call_graph_edges.parquet  call_graph_nodes.jsonl  call_graph_nodes.parquet  cfg_blocks.jsonl  cfg_blocks.parquet  cfg_edges.jsonl  cfg_edges.parquet  config_values.parquet  coverage_functions.jsonl  coverage_functions.parquet  coverage_lines.jsonl  coverage_lines.parquet  cst_nodes.parquet  dfg_edges.jsonl  dfg_edges.parquet  docstrings.parquet  function_metrics.jsonl  function_metrics.parquet  function_types.jsonl  function_types.parquet  goid_crosswalk.jsonl  goid_crosswalk.parquet  goid_risk_factors.jsonl  goid_risk_factors.parquet  goids.jsonl  goids.parquet  hotspots.jsonl  hotspots.parquet  import_graph_edges.jsonl  import_graph_edges.parquet  index.json  index.scip  index.scip.json  modules.jsonl  modules.parquet  (+10 more)
config/: dependency_patterns.yml
docs/: Analysis Epic 1.md  CurrentArchitectureOverview.md  Doc_Strings_Instructions.md  Epic C - Analytics profiles & metrics: break the big aggregators into composable recipes.md  Epic D - Single “dataset contract” layer across config, storage, and export.md  Ingest Epic 1.md  InitialArchitecture.md  Serving Epic 1.md  UpdatedArchitecture.md  analytics_file_structure_improvement.md  analytics_parsing_and_span_resolution.md  dataset_catalog.md  dataset_unification.md  plugin_catalog.html  plugin_catalog.md  query_service_alignment.md  refactor_monolithic_classes.md  subsystems_api.md
docs/_build/: path_map.txt
docs/archive_improvement_plans/: ARCHITECTURE_LAYERING.md  Change_Tracker_Implementation.md  (+22 more)
document_output/: ast_metrics.jsonl  ast_metrics.parquet  ast_nodes.jsonl  ast_nodes.parquet  call_graph_edges.jsonl  call_graph_edges.parquet  call_graph_nodes.jsonl  call_graph_nodes.parquet  cfg_block_metrics.parquet  cfg_blocks.jsonl  cfg_blocks.parquet  cfg_edges.jsonl  cfg_edges.parquet  cfg_function_metrics.parquet  config_graph_metrics_keys.parquet  config_graph_metrics_modules.parquet  config_projection_key_edges.parquet  config_projection_module_edges.parquet  config_values.jsonl  config_values.parquet  coverage_functions.jsonl  coverage_functions.parquet  coverage_lines.jsonl  coverage_lines.parquet  cst_nodes.jsonl  cst_nodes.parquet  dfg_block_metrics.parquet  dfg_edges.jsonl  dfg_edges.parquet  dfg_function_metrics.parquet  docstrings.jsonl  docstrings.parquet  file_profile.jsonl  file_profile.parquet  function_metrics.jsonl  function_metrics.parquet  function_profile.jsonl  function_profile.parquet  function_types.jsonl  function_types.parquet  (+56 more)
pkg/: __init__.py  mod.py  util.py
prefect_deployments/: export_docs.yaml
scripts/: __init__.py  bootstrap.sh  bootstrap_codex.sh  catalog.sh  render_graph_plugin_catalog.py  scaffold_dataset.sh
tests/: __init__.py  conftest.py  test_callgraph_alias_resolution.py  test_core_dependency_hygiene.py  test_layering_serving_imports.py  test_pipeline_smoke.py  test_testing_contract.py  test_tests_analytics_unit.py
tools/: __init__.py  check_layering.py  generate_normalized_macros.py  quality_report.py
(+636 files in other folders)
