[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CodeIntel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "anyio>=4.11.0",
    "ast-grep-py",
    "asyncio>=4.0.0",
    "basedpyright",
    "cython",
    "docstr-coverage",
    "docstring-parser",
    "duckdb",
    "fastapi",
    "fastmcp",
    "libcst",
    "mcp[cli]",
    "msgspec",
    "numpy",
    "pandas",
    "plotly",
    "pyarrow",
    "pydantic",
    "pydoclint",
    "pydocstyle",
    "pyrefly",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-logging",
    "pytest-json-report",
    "pytest-xdist>=3.8.0",
    "rich",
    "ruff",
    "tree-sitter",
    "tree-sitter-language-pack",
    "tree-sitter-python>=0.25.0",
    "typer",
    "uuid6",
    "vulture",
    "xxhash>=3.6.0",
    "prefect>=3.6.4",
    "jsonschema>=4.25.1",
    "networkx>=3.6",
    "scipy>=1.16.3",
    "nx-cugraph-cu12>=25.10.0",
    "hypothesis>=6.148.3",
    "prometheus-client>=0.23.1",
    "aioprometheus>=23.12.0",
    "prometheus-async>=25.1.0",
    "prometheus-flask-exporter>=0.23.2",
    "starlette-exporter>=0.23.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "starlette-prometheus>=0.10.0",
    "prometheus-api-client>=0.6.0",
    "aioprometheus-api-client>=0.0.2",
    "opentelemetry-exporter-prometheus>=0.59b0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-asyncio>=0.59b0",
    "opentelemetry-instrumentation-dbapi>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "opentelemetry-instrumentation-threading>=0.59b0",
    "opentelemetry-instrumentation-urllib>=0.59b0",
    "opentelemetry-instrumentation-wsgi>=0.59b0",
    "opentelemetry-instrumentation-asyncpg>=0.59b0",
    "opentelemetry-instrumentation-click>=0.59b0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-flask>=0.59b0",
    "opentelemetry-instrumentation-grpc>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-instrumentation-jinja2>=0.59b0",
    "opentelemetry-instrumentation-redis>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "opentelemetry-instrumentation-starlette>=0.59b0",
    "opentelemetry-instrumentation-tortoiseorm>=0.59b0",
    "opentelemetry-instrumentation-urllib3>=0.59b0",
]

[project.scripts]
codeintel = "codeintel.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["codeintel*"]


[tool.ruff]
line-length = 100
target-version = "py313"
required-version = ">=0.14.2"
output-format = "grouped"
src = ["src"]
extend-exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "I",
    "N",
    "UP",
    "SIM",
    "C4",
    "B",
    "RUF",
    "ANN",
    "D",
    "RET",
    "RSE",
    "TRY",
    "EM",
    "G",
    "LOG",
    "ISC",
    "TID",
    "ICN",
    "TD",
    "ERA",
    "PGH",
    "C90",
    "PLR",
    "W",
    "A",
    "ARG",
    "BLE",
    "DTZ",
    "PTH",
    "PIE",
    "S",
    "PT",
    "T20",
    "PLW",
    "PLC",
    "PERF",
    "YTT",
    "PYI",
    "TC",      # Type-checking imports (typing gates enforcement)
    "SLOT",
    "FBT",
    "SLF",
    "ASYNC",
    "INP",     # Input validation (implicit namespace packages)
    "EXE",     # Executable shebang checks
    "FIX",
    "NPY",
    "PD",
    "PLE",
    "DOC",
]
ignore = ["Q", "E203", "D203", "D213", "D205", "TC001", "TC002", "TC003"]
preview = true
extend-select = ["RUF100", "D401", "D417"]

# Typing gates enforcement: escalate these to errors via explicit config
extend-ignore = []  # Placeholder for potential future ignores
# Note: TC, INP, EXE rules are ERRORS by default; PLC2701 (typing-only import) treated specially per-file

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 12
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# ConfigBuilder intentionally has many methods (one per step config type)
# PLR0904: Too many public methods
# PLR0913: Too many arguments (entrypoints toggles)
"src/codeintel/config/builder.py" = ["PLR0904", "PLR0913"]
# Primitives has complex constructors
"src/codeintel/config/primitives.py" = ["PLR0913", "DOC201"]

[tool.vulture]
# Strict, but still manageable threshold.
min_confidence = 90

# Where to scan by default. (You can add "tests" too, but that can be noisy.)
# Include the whitelist module so intentionally referenced names stay marked as used.
paths = ["src"]

exclude = [
  ".git/*", ".hg/*", ".venv", ".venv/*", ".venv/**", "**/.venv/**",
  ".ruff_cache/*", ".pytest_cache/*"
]



[tool.pydoclint]
exclude = ""
allow-init-docstring = true  # Project policy: document constructor parameters in __init__ docstrings
ignore-underscore-args = true

[tool.pydocstyle]
convention = "numpy"
add-ignore = []

[tool.codeintel.docstrings.policy]
coverage-threshold = 0.9
coverage-action = "error"
missing-params-action = "error"
missing-returns-action = "error"
